--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@
                 </a>
               </div>
             </div>
-            <div class="textWelcome">
+            <!--<div class="textWelcome">
                 <p class="text1">"L'informatique est un outil au service de votre créativité, ma mission consiste à vous accompagner dans vos projets."</p>
-            </div>
-            <div class="espacePraticulier">
+            </div>-->
+            <div class="espacePraticuliers">
 
             </div>
-            <div class="espaceEntreprise">
+            <div class="espaceEntreprises">
                 
             </div>
-            <p class="text1">"Disponibilités et bienveillance sont les maîtres mots de l'entreprise ATF3"</p>
+            <!--<p class="text1">"Disponibilités et bienveillance sont les maîtres mots de l'entreprise ATF3"</p>-->
             <div class="espaceSiteWeb">
 
             </div>
