--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
     <!-- header -->
         <Header>
-            <img class="headerImg" src="../images/fondFinal2.jpg" alt="fond">
+            <img class="headerImg" src="images/fondFinal2.jpg" alt="fond">
             <H1>ATF<span class="orange">3</span></H1>
             <h2>Informatique</h2>
             
