--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
     <!-- header -->
         <Header>
-            <img class="headerImg" src="images/fondFinal2.jpg" alt="fond">
+            <img class="headerImg" src="images/fondFinal2.png" alt="fond">
             <H1>ATF<span class="orange">3</span></H1>
             <h2>Informatique</h2>
             
@@ -34,7 +34,7 @@
               <div class="nav-links">
                   <a href="index.html">Accueil</a>
                   <a href="particuliers.html">Particuliers</a>
-                  <a href="entreprises.html">Entreprises</a>
+                  <a href="entreprises.html">Auto-Entreprises</a>
                   <a href="website.html">Sites Web</a>
                   <a href="formations.html">Formations</a>
                   <a href="telechargements.html">Téléchargements</a>
@@ -86,7 +86,7 @@
                   </div>
                   <div class="wrapper">
                     <a class="cta" href="entreprises.html">
-                      <span>Entreprises</span>
+                      <span>Auto-Entreprises</span>
                       <span>
                         <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                           <g id="arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
